--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.3",
-    "mysql": "^2.17.1",
-    "request": "^2.88.0"
+    "mysql": "^2.17.1"
   }
 }
