--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.0.0",
     "mysql": "^2.17.1"
   }
 }
